; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/ti/extr_divider.c_ti_clk_divider_round_rate.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/ti/extr_divider.c_ti_clk_divider_round_rate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk_hw = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.clk_hw*, i64, i64*)* @ti_clk_divider_round_rate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ti_clk_divider_round_rate(%struct.clk_hw* %0, i64 %1, i64* %2) #0 {
  %4 = alloca %struct.clk_hw*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i32, align 4
  store %struct.clk_hw* %0, %struct.clk_hw** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64* %2, i64** %6, align 8
  %8 = load %struct.clk_hw*, %struct.clk_hw** %4, align 8
  %9 = load i64, i64* %5, align 8
  %10 = load i64*, i64** %6, align 8
  %11 = call i32 @ti_clk_divider_bestdiv(%struct.clk_hw* %8, i64 %9, i64* %10)
  store i32 %11, i32* %7, align 4
  %12 = load i64*, i64** %6, align 8
  %13 = load i64, i64* %12, align 8
  %14 = load i32, i32* %7, align 4
  %15 = call i64 @DIV_ROUND_UP(i64 %13, i32 %14)
  ret i64 %15
}

declare dso_local i32 @ti_clk_divider_bestdiv(%struct.clk_hw*, i64, i64*) #1

declare dso_local i64 @DIV_ROUND_UP(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
